--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
   background-color: #111; /* Black */
   overflow-x: hidden; /* Disable horizontal scroll */
   padding-top: 20px;
+  padding-left: 10px;
 }
 
 /* The navigation menu links */
@@ -38,4 +39,11 @@
   .sidenav a {
     font-size: 18px;
   }
+}
+
+#userPic {
+  border-radius: 50%;
+  border: 5px solid black;
+  width: 100px;
+  height: 100px;
 }
