fixed the side bar

--- a/signUp.css
+++ b/signUp.css
@@ -40,6 +40,7 @@
   display: inline-block;
   border: none;
   background: #f1f1f1;
+  resize: vertical;
 }
 
 input[type=text]:focus, input[type=password]:focus {
