Added bio dropdown button

--- a/style.css
+++ b/style.css
@@ -159,3 +159,10 @@
   z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
   cursor: pointer; /* Add a pointer on hover */
 }
+
+.bioBttn{
+  margin-left: 500px
+}
+.collapse{
+  margin-left: 500px
+}
